--- a/3DEngineCpp/3DEngineCpp.vcxproj
+++ b/3DEngineCpp/3DEngineCpp.vcxproj
@@ -65,7 +65,8 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{C3759543-2DDA-4381-AB88-849FC6CE6339}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>My3DEngineCpp</RootNamespace>
+    <RootNamespace>3DEngine</RootNamespace>
+    <ProjectName>3DEngine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
