--- a/3DEngineCpp/3DEngineCpp.vcxproj.filters
+++ b/3DEngineCpp/3DEngineCpp.vcxproj.filters
@@ -1,65 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
+    <Filter Include="src">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="src\Game">
+      <UniqueIdentifier>{478d25a8-c0b2-412f-9eda-63b6563a2851}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Engine">
+      <UniqueIdentifier>{fe1cfe73-bc90-47c4-ad85-f6ce1582206c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Engine\components">
+      <UniqueIdentifier>{3c541502-2b93-44fd-93f7-e91031a4346e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Engine\core">
+      <UniqueIdentifier>{439c5c3d-eeba-4fa2-afe4-34d615945270}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Engine\rendering">
+      <UniqueIdentifier>{39998dc8-1346-492b-a99b-9f9efe09a71a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Engine\staticLibs">
+      <UniqueIdentifier>{db9acfc0-1590-4ddf-9527-737d43d669cf}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="3DEngine.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="camera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="coreEngine.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="freeLook.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="freeMove.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="game.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="gameComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="gameObject.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="input.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="lighting.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="mappedValues.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="material.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="math3d.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="mesh.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="meshRenderer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="referenceCounter.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="renderingEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="renderUtil.h">
@@ -68,94 +41,139 @@
     <ClInclude Include="sdl_backend.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="shader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="stb_image.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="texture.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="time.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="transform.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="util.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="vertex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="freeMove.h">
+      <Filter>src\Engine\components</Filter>
+    </ClInclude>
+    <ClInclude Include="freeLook.h">
+      <Filter>src\Engine\components</Filter>
+    </ClInclude>
+    <ClInclude Include="coreEngine.h">
+      <Filter>src\Engine\core</Filter>
+    </ClInclude>
+    <ClInclude Include="game.h">
+      <Filter>src\Engine\core</Filter>
+    </ClInclude>
+    <ClInclude Include="input.h">
+      <Filter>src\Engine\core</Filter>
+    </ClInclude>
+    <ClInclude Include="mappedValues.h">
+      <Filter>src\Engine\core</Filter>
+    </ClInclude>
+    <ClInclude Include="math3d.h">
+      <Filter>src\Engine\core</Filter>
+    </ClInclude>
+    <ClInclude Include="referenceCounter.h">
+      <Filter>src\Engine\core</Filter>
+    </ClInclude>
+    <ClInclude Include="transform.h">
+      <Filter>src\Engine\core</Filter>
+    </ClInclude>
+    <ClInclude Include="util.h">
+      <Filter>src\Engine\core</Filter>
+    </ClInclude>
+    <ClInclude Include="camera.h">
+      <Filter>src\Engine\rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="lighting.h">
+      <Filter>src\Engine\rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="material.h">
+      <Filter>src\Engine\rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="mesh.h">
+      <Filter>src\Engine\rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="renderingEngine.h">
+      <Filter>src\Engine\rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="shader.h">
+      <Filter>src\Engine\rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="texture.h">
+      <Filter>src\Engine\rendering</Filter>
+    </ClInclude>
     <ClInclude Include="window.h">
-      <Filter>Header Files</Filter>
+      <Filter>src\Engine\rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>src\Engine\staticLibs</Filter>
+    </ClInclude>
+    <ClInclude Include="meshRenderer.h">
+      <Filter>src\Engine\components</Filter>
+    </ClInclude>
+    <ClInclude Include="time.h">
+      <Filter>src\Engine\core</Filter>
+    </ClInclude>
+    <ClInclude Include="3DEngine.h">
+      <Filter>src\Engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="camera.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="coreEngine.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="freeLook.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="freeMove.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="game.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="gameObject.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="input.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="lighting.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="math3d.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="mesh.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="renderingEngine.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="renderUtil.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>src\Game</Filter>
     </ClCompile>
     <ClCompile Include="sdl_backend.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>src\Engine</Filter>
     </ClCompile>
-    <ClCompile Include="shader.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="renderUtil.cpp">
+      <Filter>src\Engine</Filter>
     </ClCompile>
-    <ClCompile Include="stb_image.c">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="gameObject.cpp">
+      <Filter>src\Engine</Filter>
     </ClCompile>
-    <ClCompile Include="texture.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="freeLook.cpp">
+      <Filter>src\Engine\components</Filter>
     </ClCompile>
-    <ClCompile Include="time.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="freeMove.cpp">
+      <Filter>src\Engine\components</Filter>
+    </ClCompile>
+    <ClCompile Include="coreEngine.cpp">
+      <Filter>src\Engine\core</Filter>
+    </ClCompile>
+    <ClCompile Include="game.cpp">
+      <Filter>src\Engine\core</Filter>
+    </ClCompile>
+    <ClCompile Include="input.cpp">
+      <Filter>src\Engine\core</Filter>
+    </ClCompile>
+    <ClCompile Include="math3d.cpp">
+      <Filter>src\Engine\core</Filter>
     </ClCompile>
     <ClCompile Include="transform.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>src\Engine\core</Filter>
     </ClCompile>
     <ClCompile Include="util.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>src\Engine\core</Filter>
+    </ClCompile>
+    <ClCompile Include="camera.cpp">
+      <Filter>src\Engine\rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="lighting.cpp">
+      <Filter>src\Engine\rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="mesh.cpp">
+      <Filter>src\Engine\rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="renderingEngine.cpp">
+      <Filter>src\Engine\rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="shader.cpp">
+      <Filter>src\Engine\rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="texture.cpp">
+      <Filter>src\Engine\rendering</Filter>
     </ClCompile>
     <ClCompile Include="window.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>src\Engine\rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="stb_image.c">
+      <Filter>src\Engine\staticLibs</Filter>
+    </ClCompile>
+    <ClCompile Include="time.cpp">
+      <Filter>src\Engine\core</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
