--- a/3DEngineCpp/3DEngineCpp.vcxproj.filters
+++ b/3DEngineCpp/3DEngineCpp.vcxproj.filters
@@ -41,17 +41,11 @@
     <ClInclude Include="sdl_backend.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="vertex.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="freeMove.h">
       <Filter>src\Engine\components</Filter>
     </ClInclude>
     <ClInclude Include="freeLook.h">
       <Filter>src\Engine\components</Filter>
-    </ClInclude>
-    <ClInclude Include="coreEngine.h">
-      <Filter>src\Engine\core</Filter>
     </ClInclude>
     <ClInclude Include="game.h">
       <Filter>src\Engine\core</Filter>
@@ -110,11 +104,14 @@
     <ClInclude Include="3DEngine.h">
       <Filter>src\Engine</Filter>
     </ClInclude>
+    <ClInclude Include="coreEngine.h">
+      <Filter>src\Engine\core</Filter>
+    </ClInclude>
+    <ClInclude Include="vertex.h">
+      <Filter>src\Engine\rendering</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>src\Game</Filter>
-    </ClCompile>
     <ClCompile Include="sdl_backend.cpp">
       <Filter>src\Engine</Filter>
     </ClCompile>
@@ -129,9 +126,6 @@
     </ClCompile>
     <ClCompile Include="freeMove.cpp">
       <Filter>src\Engine\components</Filter>
-    </ClCompile>
-    <ClCompile Include="coreEngine.cpp">
-      <Filter>src\Engine\core</Filter>
     </ClCompile>
     <ClCompile Include="game.cpp">
       <Filter>src\Engine\core</Filter>
@@ -173,6 +167,12 @@
       <Filter>src\Engine\staticLibs</Filter>
     </ClCompile>
     <ClCompile Include="time.cpp">
+      <Filter>src\Engine\core</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\main.cpp">
+      <Filter>src\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="coreEngine.cpp">
       <Filter>src\Engine\core</Filter>
     </ClCompile>
   </ItemGroup>
